@@ -1,3 +1,3 @@
 module RailsLayout
-  VERSION = "1.0.38"
+  VERSION = "1.0.39"
 end
