@@ -1,8 +1,13 @@
 h1. CHANGELOG
 
+h3. 1.0.39 May 10, 2017
+
+* Rails 5.1 uses 'rails-ujs' but earlier versions need 'jquery_ujs'
+
 h3. 1.0.38 May 10, 2017
 
 * jQuery is required for Bootstrap or Foundation
+* Rails 5.1 uses 'rails-ujs' but earlier versions need 'jquery_ujs'
 
 h3. 1.0.37 May 7, 2017
 
